# agents

./: README.md
cookbook/instagram_post/: pyproject.toml  tasks.py
cookbook/scrap_website/: page.html  test.ipynb
cookbook/workflow/: orchestrator_workers_worflow.ipynb
latest_ai_development/: report.md
making_shorts/: README.md  first_person_scenario.md  project.ipynb  pyproject.toml
making_shorts/fine_tune/data/: adapt_story.jsonl  data.jsonl  image_generation_prompt.jsonl  story_generation.jsonl
making_shorts/output/: dramatic_narration_task.txt
making_shorts/src/making_shorts/: crew.py  main.py
making_shorts/src/making_shorts/config/: agents.yaml  tasks.yaml  tasks_2.yaml
models/: magic-pdf.json
pdf/: download_models_hf.py  pdf_converter.py  pdf_explantion.ipynb  pdf_translator.ipynb
pdf/data/: explanation_data_by_deepseek-reasoner.jsonl  explanation_data_by_o1-preview-2024-09-12.jsonl  qa_data_by_{model_name}.jsonl
pdf/input_file/: 2412.08445v1.md  2412.08445v1_explained.md  ALPAGASUS: TRAINING A BETTER ALPACA WITH FEWER DATA.md  Code Less, Align More: Efficient LLM Fine-tuning for Code Generation with Data Pruning.md  Enhancing Chat Language Models by Scaling High-quality Instructional Conversations.md  Fine-tuned Language Models Are Zero-shot Learners.md  INSTRUCTION TUNING WITH GPT-4.md  LIMA: Less Is More for Alignment.md  Magicoder: Empowering Code Generation with OSS-INSTRUCT.md  Reinforced Self-Training (ReST) for Language Modeling.md  (+4 more)
web/: web_document_explanation.ipynb
youtube/: youtube_explanation.ipynb
(+44 files in other folders)
