[project]
name = "making_shorts"
version = "0.1.0"
description = "making-shorts using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
making_shorts = "making_shorts.main:run"
run_crew = "making_shorts.main:run"
train = "making_shorts.main:train"
replay = "making_shorts.main:replay"
test = "making_shorts.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
